--- a/src/styles/scss/_hero.scss
+++ b/src/styles/scss/_hero.scss
@@ -15,30 +15,30 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-out;
     .hero-item {
-        width: 0;
-        transition: all 0.3s ease-in-out;
-        transform: translateY(-100%);
-        text-align: center;
-        &.hero-item--left {
-            text-align: left;
-        }
-        &__title {
-          font-size: 48px;
-          font-weight: 700;
-          color: #fff;
-          margin-bottom: 20px;
-        }
-        &__subtitle {
-          margin-bottom: 40px;
-          font-size: 24px;
-          font-weight: 500;
-          color: $secondary;
-        }
+      width: 0;
+      transition: all 0.5s ease-out;
+      transform: translateY(-100%);
+      text-align: center;
+      &.hero-item--left {
+        text-align: left;
+      }
+      &__title {
+        font-size: 48px;
+        font-weight: 700;
+        color: #fff;
+        margin-bottom: 20px;
+      }
+      &__subtitle {
+        margin-bottom: 40px;
+        font-size: 24px;
+        font-weight: 500;
+        color: $secondary;
+      }
     }
     .active-text {
-      width: 100%;
+      width: calc(100% - 15px);
       margin: auto;
       transform: translateY(0);
     }
@@ -51,7 +51,7 @@
     height: 100%;
     z-index: 1;
     img {
-        filter: brightness(0.8);
+      filter: brightness(0.8);
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -59,7 +59,7 @@
       bottom: 100%;
       left: 0;
       z-index: 1;
-      transition: all 0.3s ease-in-out;
+      transition: all 0.5s ease-out;
       &.active-slide {
         bottom: 0;
         z-index: 2;
