--- a/src/styles/scss/_schedule.scss
+++ b/src/styles/scss/_schedule.scss
@@ -8,6 +8,7 @@
         .schedule-table {
             width: 100%;
             text-align: left;
+            border-bottom: 1px solid $primary;
             &__header {
                 background-color: $primary;
                 color: #fff;
