--- a/src/styles/scss/kit/_fontello.scss
+++ b/src/styles/scss/kit/_fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?29867785');
-  src: url('../font/fontello.eot?29867785#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?29867785') format('woff2'),
-       url('../font/fontello.woff?29867785') format('woff'),
-       url('../font/fontello.ttf?29867785') format('truetype'),
-       url('../font/fontello.svg?29867785#fontello') format('svg');
+  src: url('../font/fontello.eot?55114286');
+  src: url('../font/fontello.eot?55114286#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?55114286') format('woff2'),
+       url('../font/fontello.woff?55114286') format('woff'),
+       url('../font/fontello.ttf?55114286') format('truetype'),
+       url('../font/fontello.svg?55114286#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?29867785#fontello') format('svg');
+    src: url('../font/fontello.svg?55114286#fontello') format('svg');
   }
 }
 */
@@ -54,4 +54,9 @@
 }
 
 .icon-arrow-down:before { content: '\e800'; } /* '' */
+.icon-search:before { content: '\e801'; } /* '' */
+.icon-location:before { content: '\e802'; } /* '' */
+.icon-phone:before { content: '\e803'; } /* '' */
+.icon-mail:before { content: '\f0e0'; } /* '' */
+.icon-arrow-left:before { content: '\f177'; } /* '' */
 .icon-arrow-right:before { content: '\f178'; } /* '' */
