--- a/src/styles/scss/kit/_general.scss
+++ b/src/styles/scss/kit/_general.scss
@@ -16,12 +16,20 @@ a {
   justify-content: space-between;
 }
 
+.justify-content-center {
+  justify-content: center;
+}
+
 .align-items-center {
   align-items: center;
 }
 
 .align-items-start {
   align-items: flex-start;
+}
+
+.g-10 {
+  gap: 10px;
 }
 
 .no-list-style li {
@@ -38,6 +46,7 @@ a {
   font-weight: 500;
   display: inline-block;
   text-transform: uppercase;
+  cursor: pointer;
   color: #fff;
   &:hover {
     box-shadow: 0 0 10px rgba(170, 1, 255, 0.3) inset;
