--- a/src/styles/scss/_gallery.scss
+++ b/src/styles/scss/_gallery.scss
@@ -69,13 +69,17 @@
             }
         }
         .gallery-content {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            // display: grid;
+            // grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            // place-items: center;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
             justify-content: center;
-            align-items: flex-start;
             gap: 10px;
             margin-bottom: 20px;
             &__item {
+                max-width: 380px;
                 width: 100%;
                 height: 100%;
                 min-height: 300px;
@@ -85,6 +89,9 @@
                 transition: all 0.3s ease-in-out;
                 &:hover {
                     border-radius: 15px;
+                    img {
+                        transform: scale(1.1);
+                    }
                     .gallery-content__item-caption {
                         bottom: 0;
                     }
@@ -93,7 +100,7 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
-                    transition: all 0.3s ease-in-out;
+                    transition: all 0.5s ease-in-out;
                     position: absolute;
                     z-index: 1;
                 }
