--- a/src/styles/scss/_gallery.scss
+++ b/src/styles/scss/_gallery.scss
@@ -36,7 +36,7 @@
                 input {
                     padding: 10px 15px;
                     width: 100%;
-                    border-radius: 15px 0 0 15px;
+                    border-radius: 15px 5px 5px 15px;
                     border: 1px solid #ccc;
                     font-size: 16px;
                     font-weight: 500;
@@ -87,6 +87,9 @@
                 overflow: hidden;
                 border-radius: 25px;
                 transition: all 0.3s ease-in-out;
+                @media screen and (max-width: 810px) {
+                    max-width: 100%;
+                }
                 &:hover {
                     border-radius: 15px;
                     img {
