--- a/src/styles/scss/_contact.scss
+++ b/src/styles/scss/_contact.scss
@@ -1,6 +1,7 @@
 .contact {
   padding: 20px 0 30px;
   background-color: $secondary;
+
   &-inner {
     padding: 20px;
     background-color: #efe8e0;
@@ -9,16 +10,19 @@
     margin: 0 auto;
     flex-wrap: wrap;
     gap: 10px;
+
     &__content {
       display: flex;
       justify-content: center;
       align-items: flex-start;
       flex-direction: column;
       gap: 10px;
+
       &-box {
         display: flex;
         align-items: center;
         justify-content: flex-start;
+
         .contact-icon {
           font-size: 25px;
           color: #fff;
@@ -27,19 +31,23 @@
           padding: 15px;
           margin-right: 20px;
         }
+
         .contact-text {
           font-size: 18px;
           color: $primary;
+
           a {
             text-decoration: underline;
           }
         }
       }
     }
+
     &__map {
       max-width: 500px;
       width: 100%;
       height: 300px;
+
       iframe {
         width: 100%;
         height: 100%;
@@ -48,19 +56,23 @@
     }
   }
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (width <= 768px) {
   .contact {
     &-inner {
         padding: 0;
         background-color: transparent;
+
       &__content {
         &-box {
           .contact-icon {
             font-size: 20px;
             padding: 10px;
           }
+
           .contact-text {
             font-size: 16px;
+
             a {
                 text-wrap: wrap;
             }
