--- a/src/styles/scss/_gallery.scss
+++ b/src/styles/scss/_gallery.scss
@@ -1,157 +1,160 @@
 .gallery {
-    width: 100%;
-    height: auto;
-    padding: 20px 0;
-    &-inner {
-        padding: 0 20px;
-        .filter {
-            margin-bottom: 20px;
-            &-btns {
-                width: 100%;
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
-                gap: 5px;
-                overflow-x: auto;
-                .btn {
-                    border-radius: 15px;
-                    font-size: 16px;
-                    padding: 10px 15px;
-                    font-weight: 500;
-                    text-transform: none;
-                    display: block;
-                    text-wrap: nowrap;
-                    background-color: rgba($primary, 0.5);
-                    &.active, &:hover {
-                        background-image: $gradient;
-                    }
-                }
-            }
-            &-search {
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-                gap: 0;
-                width: 100%;
-                input {
-                    padding: 10px 15px;
-                    width: 100%;
-                    border-radius: 15px 5px 5px 15px;
-                    border: 1px solid #ccc;
-                    font-size: 16px;
-                    font-weight: 500;
-                    text-transform: none;
-                    &:focus {
-                        outline: none;
-                        border-color: $primary;
-                    }
-                    &:placeholder-shown + .filter-search__btn {
-                        background-color: rgba($primary, 0.5);
-                        border-color: rgba($primary, 0.5);
-                        background-image: none;
-                    }
-                }
-                &__btn {
-                    padding: 10px 15px;
-                    border-radius: 0 15px 15px 0;
-                    background-image: $gradient;
-                    outline: none;
-                    border: 1px solid $primary;
-                    color: #fff;
-                    font-size: 16px;
-                    font-weight: 500;
-                    text-transform: none;
-                    cursor: pointer;
-                    &:hover {
-                        box-shadow: 0 0 10px rgba(170, 1, 255, 0.3) inset;
-                    }
-                }
-            }
+  width: 100%;
+  height: auto;
+  padding: 20px 0;
+
+  &-inner {
+    padding: 0 20px;
+
+    .filter {
+      margin-bottom: 20px;
+
+      &-btns {
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 5px;
+        overflow-x: auto;
+
+        .btn {
+          border-radius: 15px;
+          font-size: 16px;
+          padding: 10px 15px;
+          font-weight: 500;
+          text-transform: none;
+          display: block;
+          text-wrap: nowrap;
+          background-color: rgba($primary, 0.5);
+
+          &.active,
+          &:hover {
+            background-image: $gradient;
+          }
         }
-        .gallery-content {
-            // display: grid;
-            // grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            // place-items: center;
-            display: flex;
-            align-items: center;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-            margin-bottom: 20px;
-            &__item {
-                max-width: 380px;
-                width: 100%;
-                height: 100%;
-                min-height: 300px;
-                position: relative;
-                overflow: hidden;
-                border-radius: 25px;
-                transition: all 0.3s ease-in-out;
-                @media screen and (max-width: 810px) {
-                    max-width: 100%;
-                }
-                &:hover {
-                    border-radius: 15px;
-                    img {
-                        transform: scale(1.1);
-                    }
-                    .gallery-content__item-caption {
-                        bottom: 0;
-                    }
-                }
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    transition: all 0.5s ease-in-out;
-                    position: absolute;
-                    z-index: 1;
-                }
-                &-caption {
-                    position: absolute;
-                    z-index: 2;
-                    left: 0;
-                    bottom: -100%;
-                    width: 100%;
-                    height: auto;
-                    background-color: rgba($color: #000000, $alpha: 0.6);
-                    color: #fff;
-                    padding: 10px 15px;
-                    transition: all 0.5s ease;
-                    cursor: default;
-                }
-            }
+      }
+
+      &-search {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 0;
+        width: 100%;
+
+        input {
+          padding: 10px 15px;
+          width: 100%;
+          border-radius: 15px 5px 5px 15px;
+          border: 1px solid #ccc;
+          font-size: 16px;
+          font-weight: 500;
+          text-transform: none;
+
+          &:focus {
+            outline: none;
+            border-color: $primary;
+          }
         }
-        .gallery-pagination {
-            gap: 5px;
-            margin-top: 20px;
-            .btn {
-                border-radius: 5px;
-                font-size: 15px;
-                padding: 10px 15px;
-                background-image: none;
-                background-color: $third;
-                transition: all 0.3s ease-in-out;
-                &:hover {
-                    background-color: $primary;
-                }
-                &.active {
-                    background-image: $gradient;
-                }
-            }
-        }
+      }
     }
+
+    .gallery-content {
+      // display: grid;
+      // grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      // place-items: center;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 20px;
+
+      &__item {
+        max-width: 380px;
+        width: 100%;
+        height: 100%;
+        min-height: 300px;
+        position: relative;
+        overflow: hidden;
+        border-radius: 25px;
+        transition: all 0.3s ease-in-out;
+
+        @media screen and (width <= 810px) {
+          max-width: 100%;
+        }
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          transition: all 0.5s ease-in-out;
+          position: absolute;
+          z-index: 1;
+        }
+
+        &-caption {
+          position: absolute;
+          z-index: 2;
+          left: 0;
+          bottom: -100%;
+          width: 100%;
+          height: auto;
+          background-color: rgba($color: #000, $alpha: 60%);
+          color: #fff;
+          padding: 10px 15px;
+          transition: all 0.5s ease;
+          cursor: default;
+        }
+
+        &:hover {
+          border-radius: 15px;
+
+          img {
+            transform: scale(1.1);
+          }
+
+          &-caption {
+            bottom: 0;
+          }
+        }
+      }
+    }
+
+    .gallery-pagination {
+      gap: 5px;
+      margin-top: 20px;
+
+      .pagination-btn {
+        border-radius: 5px;
+        font-size: 15px;
+        padding: 10px 15px;
+        background-image: none;
+        background-color: $third;
+        transition: all 0.3s ease-in-out;
+        
+        &.active {
+          background-image: $gradient;
+        }
+
+        &:hover {
+          background-color: $primary;
+        }
+
+      }
+    }
+  }
 }
-@media screen and (max-width: 768px) {
-    .gallery {
-        &-inner {
-            .gallery-content {
-                &__item {
-                    &-caption {
-                        bottom: 0;
-                    }
-                }
-            }
+
+@media screen and (width <= 768px) {
+  .gallery {
+    &-inner {
+      .gallery-content {
+        &__item {
+          &-caption {
+            bottom: 0;
+          }
         }
+      }
     }
+  }
 }
