--- a/src/styles/scss/_hero.scss
+++ b/src/styles/scss/_hero.scss
@@ -5,6 +5,7 @@
   min-height: 600px;
   overflow: hidden;
   position: relative;
+
   &-inner {
     position: absolute;
     z-index: 2;
@@ -16,20 +17,24 @@
     align-items: center;
     text-align: center;
     transition: all 0.3s ease-out;
+
     .hero-item {
       width: 0;
       transition: all 0.5s ease-out;
       transform: translateY(-100%);
       text-align: center;
-      &.hero-item--left {
+
+      &--left {
         text-align: left;
       }
+
       &__title {
         font-size: 48px;
         font-weight: 700;
         color: #fff;
         margin-bottom: 20px;
       }
+
       &__subtitle {
         margin-bottom: 40px;
         font-size: 24px;
@@ -37,12 +42,14 @@
         color: $secondary;
       }
     }
+
     .active-text {
       width: calc(100% - 15px);
       margin: auto;
       transform: translateY(0);
     }
   }
+
   &-slide {
     position: absolute;
     top: 0;
@@ -50,6 +57,7 @@
     width: 100%;
     height: 100%;
     z-index: 1;
+
     img {
       filter: brightness(0.8);
       width: 100%;
@@ -60,6 +68,7 @@
       left: 0;
       z-index: 1;
       transition: all 0.5s ease-out;
+
       &.active-slide {
         bottom: 0;
         z-index: 2;
