--- a/src/styles/scss/_schedule.scss
+++ b/src/styles/scss/_schedule.scss
@@ -5,10 +5,12 @@
     &-inner {
         max-width: 100%;
         width: 100%;
+
         .schedule-table {
             width: 100%;
             text-align: left;
             border-bottom: 1px solid $primary;
+
             &__header {
                 background-color: $primary;
                 color: #fff;
@@ -17,13 +19,16 @@
                 margin-bottom: 10px;
                 text-transform: uppercase;
             }
+
             &__title {
                 background-color: rgba($primary, $alpha: 0.3);
             }
+
             th, td {
                 min-width: 200px;
                 padding: 10px 15px;
             }
+
             .class {
                 box-shadow: 0 0 3px rgba($primary, 0.5), 0 0 5px rgba(rgba($secondary, $alpha: 0.5), 0.5);
                 padding: 5px 10px;
@@ -35,10 +40,12 @@
                 font-weight: 500;
                 border-radius: 10px;
                 cursor: pointer;
+
                 &-right {
                     text-align: right;
                 }
             }
+
             td:nth-child(odd) {
                 .class {
                     color: $primary;
@@ -47,15 +54,18 @@
             }
         }
     }
-    @media screen and (max-width: 768px) {
+
+    @media screen and (width <= 768px) {
         .schedule {
             &-inner {
                 padding: 10px 20px;
                 overflow-x: scroll;
+
                 .schedule-table {
                     .class {
                         flex-direction: column;
                         align-items: flex-start;
+
                         &-right {
                             text-align: left;
                         }
