--- a/src/styles/scss/kit/_fontello.scss
+++ b/src/styles/scss/kit/_fontello.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'fontello';
+  font-family: fontello;
   src: url('../font/fontello.eot?55114286');
   src: url('../font/fontello.eot?55114286#iefix') format('embedded-opentype'),
        url('../font/fontello.woff2?55114286') format('woff2'),
@@ -9,8 +9,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
@@ -19,19 +22,19 @@
   }
 }
 */
-[class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "fontello";
+[class^="icon-"]::before, [class*=" icon-"]::before {
+  font-family: fontello, sans-serif;
   font-style: normal;
   font-weight: normal;
-
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
+
   /* opacity: .8; */
 
-  /* For safety - reset parent styles, that can break glyph codes*/
+  /* For safety - reset parent styles, that can break glyph codes */
   font-variant: normal;
   text-transform: none;
 
@@ -39,10 +42,12 @@
   line-height: 1em;
 
   /* Animation center compensation - margins should be symmetric */
+
   /* remove if not needed */
   margin-left: .2em;
 
   /* you can be more comfortable with increased icons size */
+
   /* font-size: 120%; */
 
   /* Font smoothing. That was taken from TWBS */
@@ -50,13 +55,14 @@
   -moz-osx-font-smoothing: grayscale;
 
   /* Uncomment for 3D effect */
+
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-arrow-down:before { content: '\e800'; } /* '' */
-.icon-search:before { content: '\e801'; } /* '' */
-.icon-location:before { content: '\e802'; } /* '' */
-.icon-phone:before { content: '\e803'; } /* '' */
-.icon-mail:before { content: '\f0e0'; } /* '' */
-.icon-arrow-left:before { content: '\f177'; } /* '' */
-.icon-arrow-right:before { content: '\f178'; } /* '' */
+.icon-arrow-down::before { content: '\e800'; } /* '' */
+.icon-search::before { content: '\e801'; } /* '' */
+.icon-location::before { content: '\e802'; } /* '' */
+.icon-phone::before { content: '\e803'; } /* '' */
+.icon-mail::before { content: '\f0e0'; } /* '' */
+.icon-arrow-left::before { content: '\f177'; } /* '' */
+.icon-arrow-right::before { content: '\f178'; } /* '' */
