--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,7 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Imperial+Script&family=Lavishly+Yours&display=swap');
+@import "https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap";
+@import 'https://fonts.googleapis.com/css2?family=Imperial+Script&family=Lavishly+Yours&display=swap';
 @import "kit/variables";
 @import "kit/fontello";
+@import "kit/general";
+@import "header";
+@import "hero";
+@import "about";
+@import "schedule";
+@import "gallery";
+@import "contact";
 
 * {
   margin: 0;
@@ -11,14 +18,5 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
 }
-
-@import "kit/general";
-
-@import "header";
-@import "hero";
-@import "about";
-@import "schedule";
-@import "gallery";
-@import "contact";
