--- a/src/styles/scss/kit/_variables.scss
+++ b/src/styles/scss/kit/_variables.scss
@@ -1,4 +1,4 @@
-$primary: #8F6383;
-$secondary: #F4F4F4;
-$gradient: linear-gradient(#BE79AA, #CD8FBA);
-$third: #54504B;
+$primary: #8f6383;
+$secondary: #f4f4f4;
+$gradient: linear-gradient(#be79aa, #cd8fba);
+$third: #54504b;
