--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap";
-@import 'https://fonts.googleapis.com/css2?family=Imperial+Script&family=Lavishly+Yours&display=swap';
+@import "https://fonts.googleapis.com/css2?family=Imperial+Script&family=Lavishly+Yours&display=swap";
 @import "kit/variables";
 @import "kit/fontello";
 @import "kit/general";
