--- a/src/styles/scss/_schedule.scss
+++ b/src/styles/scss/_schedule.scss
@@ -1,77 +1,80 @@
 .schedule {
-    padding: 20px 0;
-    background-color: #f9f9f9;
+  padding: 20px 0;
+  background-color: #f9f9f9;
 
-    &-inner {
-        max-width: 100%;
-        width: 100%;
+  &-inner {
+    max-width: 100%;
+    width: 100%;
+
+    .schedule-table {
+      width: 100%;
+      text-align: left;
+      border-bottom: 1px solid $primary;
+
+      &__header {
+        background-color: $primary;
+        color: #fff;
+        font-size: 1rem;
+        font-weight: 700;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+      }
+
+      &__title {
+        background-color: rgba($primary, $alpha: 0.3);
+      }
+
+      th,
+      td {
+        min-width: 200px;
+        padding: 10px 15px;
+      }
+
+      .class {
+        box-shadow:
+          0 0 3px rgba($primary, 0.5),
+          0 0 5px rgba(rgba($secondary, $alpha: 0.5), 0.5);
+        padding: 5px 10px;
+        gap: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: rgba($primary, $alpha: 0.3);
+        font-weight: 500;
+        border-radius: 10px;
+        cursor: pointer;
+
+        &-right {
+          text-align: right;
+        }
+      }
+
+      td:nth-child(odd) {
+        .class {
+          color: $primary;
+          background-color: rgba($secondary, $alpha: 0.5);
+        }
+      }
+    }
+  }
+
+  @media screen and (width <= 768px) {
+    .schedule {
+      &-inner {
+        padding: 10px 20px;
+        overflow-x: scroll;
 
         .schedule-table {
-            width: 100%;
-            text-align: left;
-            border-bottom: 1px solid $primary;
+          .class {
+            flex-direction: column;
+            align-items: flex-start;
 
-            &__header {
-                background-color: $primary;
-                color: #fff;
-                font-size: 1rem;
-                font-weight: 700;
-                margin-bottom: 10px;
-                text-transform: uppercase;
+            &-right {
+              text-align: left;
             }
-
-            &__title {
-                background-color: rgba($primary, $alpha: 0.3);
-            }
-
-            th, td {
-                min-width: 200px;
-                padding: 10px 15px;
-            }
-
-            .class {
-                box-shadow: 0 0 3px rgba($primary, 0.5), 0 0 5px rgba(rgba($secondary, $alpha: 0.5), 0.5);
-                padding: 5px 10px;
-                gap: 15px;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                background-color: rgba($primary, $alpha: 0.3);
-                font-weight: 500;
-                border-radius: 10px;
-                cursor: pointer;
-
-                &-right {
-                    text-align: right;
-                }
-            }
-
-            td:nth-child(odd) {
-                .class {
-                    color: $primary;
-                    background-color: rgba($secondary, $alpha: 0.5);
-                }
-            }
+          }
         }
+      }
     }
-
-    @media screen and (width <= 768px) {
-        .schedule {
-            &-inner {
-                padding: 10px 20px;
-                overflow-x: scroll;
-
-                .schedule-table {
-                    .class {
-                        flex-direction: column;
-                        align-items: flex-start;
-
-                        &-right {
-                            text-align: left;
-                        }
-                    }
-                }
-            }
-        }
-    }
+  }
 }
