--- a/src/styles/scss/kit/_fontello.scss
+++ b/src/styles/scss/kit/_fontello.scss
@@ -1,11 +1,12 @@
 @font-face {
   font-family: fontello;
-  src: url('../font/fontello.eot?55114286');
-  src: url('../font/fontello.eot?55114286#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?55114286') format('woff2'),
-       url('../font/fontello.woff?55114286') format('woff'),
-       url('../font/fontello.ttf?55114286') format('truetype'),
-       url('../font/fontello.svg?55114286#fontello') format('svg');
+  src: url("../font/fontello.eot?55114286");
+  src:
+    url("../font/fontello.eot?55114286#iefix") format("embedded-opentype"),
+    url("../font/fontello.woff2?55114286") format("woff2"),
+    url("../font/fontello.woff?55114286") format("woff"),
+    url("../font/fontello.ttf?55114286") format("truetype"),
+    url("../font/fontello.svg?55114286#fontello") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -22,14 +23,15 @@
   }
 }
 */
-[class^="icon-"]::before, [class*=" icon-"]::before {
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
   font-family: fontello, sans-serif;
   font-style: normal;
   font-weight: normal;
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: .2em;
+  margin-right: 0.2em;
   text-align: center;
 
   /* opacity: .8; */
@@ -44,7 +46,7 @@
   /* Animation center compensation - margins should be symmetric */
 
   /* remove if not needed */
-  margin-left: .2em;
+  margin-left: 0.2em;
 
   /* you can be more comfortable with increased icons size */
 
@@ -59,10 +61,24 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-arrow-down::before { content: '\e800'; } /* '' */
-.icon-search::before { content: '\e801'; } /* '' */
-.icon-location::before { content: '\e802'; } /* '' */
-.icon-phone::before { content: '\e803'; } /* '' */
-.icon-mail::before { content: '\f0e0'; } /* '' */
-.icon-arrow-left::before { content: '\f177'; } /* '' */
-.icon-arrow-right::before { content: '\f178'; } /* '' */
+.icon-arrow-down::before {
+  content: "\e800";
+} /* '' */
+.icon-search::before {
+  content: "\e801";
+} /* '' */
+.icon-location::before {
+  content: "\e802";
+} /* '' */
+.icon-phone::before {
+  content: "\e803";
+} /* '' */
+.icon-mail::before {
+  content: "\f0e0";
+} /* '' */
+.icon-arrow-left::before {
+  content: "\f177";
+} /* '' */
+.icon-arrow-right::before {
+  content: "\f178";
+} /* '' */
