--- a/src/styles/scss/_gallery.scss
+++ b/src/styles/scss/_gallery.scss
@@ -113,7 +113,7 @@
             transform: scale(1.1);
           }
 
-          &-caption {
+          div {
             bottom: 0;
           }
         }
@@ -125,6 +125,14 @@
       margin-top: 20px;
 
       .pagination-btn {
+        width: auto;
+        height: auto;
+        border: none;
+        font-weight: 500;
+        display: inline-block;
+        text-transform: uppercase;
+        cursor: pointer;
+        color: #fff;
         border-radius: 5px;
         font-size: 15px;
         padding: 10px 15px;
